<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Activities.SignInActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/pattern3"
        android:scaleType="fitXY"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/pattern3"
        android:scaleType="fitXY"
        android:alpha="0.5"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/close_btn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_close"
        android:tint="@color/colorIconLight"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_in_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:includeFontPadding="false"
        android:text="@string/sign_in_title"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorTextLight"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/sign_in_illustration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close_btn" />

    <TextView
        android:id="@+id/sign_in_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.66"
        android:fontFamily="@font/montserrat"
        android:includeFontPadding="false"
        android:text="@string/sign_in_subtitle"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorTextLight"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/sign_in_illustration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_title" />

    <ImageView
        android:id="@+id/sign_in_illustration"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerInside"
        android:src="@drawable/illustration_login"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/sign_in_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sign_in_title" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_illustration">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_in_email_or_mobile_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/email_or_mobile_hint"
                android:textColorHint="@color/colorTextDark"
                android:theme="@style/TextInputLayoutAppearance"
                app:boxCornerRadiusBottomEnd="28dp"
                app:boxCornerRadiusBottomStart="28dp"
                app:boxCornerRadiusTopEnd="28dp"
                app:boxCornerRadiusTopStart="28dp"
                app:boxStrokeColor="@color/colorIconDark"
                app:boxStrokeErrorColor="@color/errorColor"
                app:boxStrokeWidthFocused="1dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorIconDark"
                app:errorIconTint="@color/errorColor"
                app:errorTextColor="@color/errorColor"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/colorTextDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_user"
                app:startIconTint="@color/colorIconDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cursorVisible="true"
                    android:fontFamily="@font/montserrat"
                    android:imeOptions="actionNext"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextDark"
                    android:textSize="14sp"
                    android:textStyle="normal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_in_password_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/password_hint"
                android:textColorHint="@color/colorTextDark"
                android:theme="@style/TextInputLayoutAppearance"
                app:boxCornerRadiusBottomEnd="28dp"
                app:boxCornerRadiusBottomStart="28dp"
                app:boxCornerRadiusTopEnd="28dp"
                app:boxCornerRadiusTopStart="28dp"
                app:boxStrokeColor="@color/colorIconDark"
                app:boxStrokeErrorColor="@color/errorColor"
                app:boxStrokeWidthFocused="1dp"
                app:errorIconTint="@color/errorColor"
                app:errorTextColor="@color/errorColor"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/colorTextDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_email_or_mobile_field"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorIconDark"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/colorIconDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cursorVisible="true"
                    android:fontFamily="@font/montserrat"
                    android:imeOptions="actionDone"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextDark"
                    android:textSize="14sp"
                    android:textStyle="normal" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/montserrat"
                android:includeFontPadding="false"
                android:padding="8dp"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_password_field" />

            <androidx.cardview.widget.CardView
                android:id="@+id/sign_in_btn_container"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="28dp"
                app:cardElevation="8dp"
                app:cardPreventCornerOverlap="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/sign_in_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:includeFontPadding="false"
                        android:text="@string/sign_in_btn_text"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/colorTextLight"
                        android:textSize="18sp"
                        android:textStyle="normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/sign_in_progress_bar"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:visibility="invisible"
                android:progressTint="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password"/>

            <TextView
                android:id="@+id/sign_up_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat"
                android:includeFontPadding="false"
                android:text="@string/don_t_have_an_account"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorTextDark"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_btn_container" />

            <TextView
                android:id="@+id/sign_up_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/montserrat"
                android:includeFontPadding="false"
                android:padding="8dp"
                android:text="@string/create_account"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_desc" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>